# hal

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MACOS.md  Makefile  NOTICE  README.md  SECURITY.md  TESTING.md  build.rs  entitlements.plist  pyproject.toml  rustfmt.toml  sonar-project.properties
.cargo/: config.toml
crates/android-validation/: Cargo.toml
crates/android-validation/src/: lib.rs
crates/capi/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md  build.rs  cbindgen.toml  edgefirst-hal.pc.in
crates/capi/include/edgefirst/: hal.h
crates/capi/src/: colorimetry.rs  decoder.rs  delegate.rs  error.rs  image.rs  lib.rs  log.rs  tensor.rs  tiling.rs  trace.rs  tracker.rs
crates/capi/tests/: Makefile  bench_preproc.c  test_all.c  test_common.h  test_decoder.c  test_image.c  test_neutron_dmabuf.c  test_neutron_dmabuf_infer.c  test_tensor.c  test_tiling.c  test_tracker.c
crates/codec/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md
crates/codec/benches/: codec_benchmark.rs
crates/codec/examples/: nvjpeg_decode.rs  v4l2_scan.rs  zero_alloc_check.rs
crates/codec/src/: decoder.rs  error.rs  exif.rs  jpeg.rs  lib.rs  options.rs  pixel.rs  png.rs  traits.rs
crates/codec/src/jpeg/: bitstream.rs  color.rs  convert.rs  huffman.rs  idct.rs  markers.rs  mcu.rs  mod.rs  types.rs  upsample.rs
crates/codec/src/jpeg/color/: neon.rs  scalar.rs  sse2.rs  ssse3.rs
crates/codec/src/jpeg/idct/: neon.rs  scalar.rs  sse2.rs  sse41.rs
crates/codec/src/jpeg/nvjpeg/: ffi.rs  loader.rs  mod.rs
crates/codec/src/jpeg/upsample/: neon.rs  scalar.rs  sse2.rs
crates/codec/src/jpeg/v4l2/: buffers.rs  device.rs  format.rs  ioctl.rs  mod.rs
crates/codec/tests/: decode_jpeg.rs  decode_png.rs  decode_tensordyn.rs  exif_orientations.rs  v4l2_jpeg.rs
crates/decoder/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md
crates/decoder/benches/: decoder_benchmark.rs
crates/decoder/examples/: parse_edgefirst.rs
crates/decoder/src/: bits8.rs  byte.rs  decoder.rs  error.rs  float.rs  lib.rs  modelpack.rs  schema.rs  tiling.rs  yolo.rs
crates/decoder/src/decoder/: builder.rs  config.rs  configs.rs  dfl.rs  helpers.rs  merge.rs  mod.rs  per_scale_bridge.rs  postprocess.rs  tensor_bridge.rs  tests.rs
crates/decoder/src/per_scale/: helper.rs  mod.rs  outputs.rs  pipeline.rs  plan.rs
crates/decoder/tests/: decoder_capacity.rs  decoder_decode_vs_proto_parity.rs  decoder_from_edgefirst_json.rs  decoder_modelpack_multitask.rs  decoder_normalized_flag.rs  modelpack_coffeecup_parity.rs  modelpack_decoder_schemas.rs  per_scale_parity.rs
crates/decoder/tests/common/: mod.rs  per_scale_fixture.rs
crates/edgefirst/: Cargo.toml
crates/edgefirst/src/: lib.rs
crates/egl/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/egl/src/: lib.rs
crates/g2d-sys/: Cargo.toml  README.md
crates/g2d-sys/src/: ffi.rs  lib.rs
crates/gl/: Cargo.toml  README.md  build.rs
crates/gl/src/: apis.rs  error.rs  gl.rs  lib.rs
crates/gpu-probe/: Cargo.toml
crates/gpu-probe/jetson/: Makefile  jetson_cuda_probe.cpp
crates/gpu-probe/src/: bench.rs  bench_dma.rs  bench_egl_image.rs  bench_fbo.rs  bench_mask_pool.rs  bench_pipeline.rs  bench_render.rs  bench_rgb_direct.rs  bench_rgb_packing.rs  bench_shader.rs  bench_texture.rs  egl_context.rs  main.rs  probe.rs  probe_float_render.rs  probe_int_textures.rs  probe_min_sizes.rs  probe_nv_dmabuf.rs  probe_nvbufsurface.rs  probe_rgb_fbo.rs
crates/hal/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md
crates/hal/src/: lib.rs  trace.rs
crates/image/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md  build.rs
crates/image-converter/: Cargo.toml
crates/image-converter/benches/: image_benchmark.rs
crates/image-converter/src/: cpu.rs  error.rs  g2d.rs  lib.rs
crates/image/benches/: batch_convert_benchmark.rs  common.rs  convert_matrix_benchmark.rs  cpu_preprocess_benchmark.rs  decode_pipeline_benchmark.rs  image_benchmark.rs  mask_benchmark.rs  mask_decode_benchmark.rs  nv_path_benchmark.rs  nvjpeg_benchmark.rs  opencv_benchmark.rs  parallel_processors_benchmark.rs  pipeline_benchmark.rs  sanity_check.rs
crates/image/examples/: nvjpeg_decode.rs  pipeline_demo.rs
crates/image/src/: colorimetry.rs  cpu.rs  error.rs  g2d.rs  lib.rs  opengl_headless.rs  tiling.rs
crates/image/src/cpu/: convert.rs  masks.rs  mod.rs  resize.rs  simd.rs  tests.rs
crates/image/src/gl/: ahardwarebuffer_import.rs  cache.rs  context.rs  core.rs  dma_import.rs  float_dispatch.rs  fourcc.rs  iosurface_import.rs  macos_processor.rs  mod.rs  native_fence.rs  processor.rs  proto_dispatch.rs  render.rs  resources.rs  shaders.rs  shaders_common.rs  tests.rs  threaded.rs
crates/image/tests/: odd_dim_cpu.rs
crates/ios-validation/: Cargo.toml
crates/ios-validation/src/: lib.rs
crates/python/: ARCHITECTURE.md  Cargo.toml  README  README.md  TESTING.md  build.rs  edgefirst_hal.pyi  edgefirst_python.pyi  pyproject.toml
crates/python/src/: colorimetry.rs  decoder.rs  image.rs  lib.rs  tensor.rs  tiling.rs  tracker.rs
crates/python/tests/: decoder_dequantize.py  decoder_generic_i8.py  decoder_i8.py  decoder_modelpack_config.py  test.rs  test_decoder.rs  test_image.rs
crates/python/tests/decoder/: decoder_modelpack_config.py  decoder_yolo_det.py  dequantize.py  filter_int32.py  from_dict.py  modelpack_split.py  nms.py  yolo_det.py
crates/python/tests/image/: flip.py  grey_load.py  rgb_resize.py  rgba_to_rgb.py
crates/tensor/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md
crates/tensor/benches/: dequantize_benchmark.rs  tensor_benchmark.rs
crates/tensor/src/: ahardwarebuffer.rs  ahardwarebuffer_layout.rs  colorimetry.rs  covguard.rs  cuda.rs  dma.rs  dmabuf.rs  error.rs  format.rs  iosurface.rs  lib.rs  mem.rs  pbo.rs  shm.rs  tensor_dyn.rs
crates/tracker/: ARCHITECTURE.md  Cargo.toml  README.md  TESTING.md
crates/tracker/benches/: tracker_benchmark.rs
crates/tracker/src/: bytetrack.rs  kalman.rs  lib.rs
g2d-sys/: Cargo.toml
g2d-sys/src/: ffi.rs  lib.rs
(+151 files in other folders)
