[workspace]
resolver = "3"
members = ["crates/*"]
default-members = [
    "crates/hal",
    "crates/tensor",
    "crates/image",
    "crates/decoder",
]

[workspace.package]
description = "EdgeFirst Hardware Abstraction Layer"
authors = ["Au-Zone Technologies <support@au-zone.com>"]
homepage = "https://edgefirst.ai"
repository = "https://github.com/EdgeFirstAI/hal"
license = "Apache-2.0"
version = "0.13.2"
edition = "2021"
readme = "README.md"

[workspace.dependencies]

# External dependencies
approx = "0.5.1"
cbindgen = "0.29"
errno = "0.3"
argminmax = { version = "0.6.3", default-features = false }
ctor = "0.4.2"
dma-heap = "0.4.1"
# Internal crates
edgefirst-bench = { path = "crates/bench" }
edgefirst-hal = { version = "0.13.2", path = "crates/hal" }
edgefirst-decoder = { version = "0.13.2", path = "crates/decoder" }
edgefirst-image = { version = "0.13.2", path = "crates/image" }
edgefirst-tensor = { version = "0.13.2", path = "crates/tensor" }
edgefirst-tracker = { version = "0.13.2", path = "crates/tracker" }
enum_dispatch = "0.3.13"
env_logger = "0.11.10"
fast-math = "0.1.1"
fast_image_resize = { version = "5.5.0", features = ["image", "rayon"] }
four-char-code = "2.3.0"
g2d-sys = "1.2.0"

gbm = { package = "edgefirst-gbm", version = "0.18.2", default-features = false, features = ["dynamic", "drm-support"] }
gls = "0.1.6"
half = { version = "2.7.1", features = ["num-traits"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
image-compare = "0.4.2"
jpeg-encoder = { version = "0.6.1", features = ["simd"] }
kamadak-exif = "0.6.1"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
lapjv = "0.2.1"
libc = "0.2.183"
libloading = "0.8.8"
log = "0.4.29"
nalgebra = "0.32.6"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-stats = "0.6.0"
nix = { version = "0.30.1", features = ["fs", "ioctl", "mman"] }
num-traits = "0.2.19"
numpy = { version = "0.26.0", features = ["half"] }
opencv = { version = "0.95", default-features = false, features = ["imgproc"] }
procfs = "0.18.0"
pyo3 = { version = "0.26.0" }
pyo3-build-config = { version = "0.26.0" }
pythonize = "0.26.0"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
rustc_version = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["rt", "sync"] }
uuid = { version = "1.22.0", features = ["v4"] }
yuv = { version = "0.8.12", features = ["fast_mode"] }
zune-jpeg = "0.4.21"
zune-png = "0.4.10"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true
