[workspace]
resolver = "3"
members = ["crates/*"]
default-members = [
    "crates/hal",
    "crates/tensor",
    "crates/codec",
    "crates/image",
    "crates/decoder",
]

[workspace.package]
description = "EdgeFirst Hardware Abstraction Layer"
authors = ["Au-Zone Technologies <support@au-zone.com>"]
homepage = "https://edgefirst.ai"
repository = "https://github.com/EdgeFirstAI/hal"
license = "Apache-2.0"
version = "0.25.1"
edition = "2021"
readme = "README.md"

[workspace.dependencies]

# External dependencies
approx = "0.5.1"
cbindgen = "0.29"
errno = "0.3"
argminmax = { version = "0.6.3", default-features = false }
ctor = "0.4.2"
dma-heap = "0.4.1"
# Internal crates
edgefirst-bench = { path = "crates/bench" }
edgefirst-codec = { version = "0.25.1", path = "crates/codec" }
edgefirst-hal = { version = "0.25.1", path = "crates/hal" }
edgefirst-decoder = { version = "0.25.1", path = "crates/decoder" }
edgefirst-image = { version = "0.25.1", path = "crates/image" }
edgefirst-tensor = { version = "0.25.1", path = "crates/tensor" }
edgefirst-tracker = { version = "0.25.1", path = "crates/tracker" }
enum_dispatch = "0.3.13"
env_logger = "0.11.10"
fast-math = "0.1.1"
fast_image_resize = { version = "6.0.0", features = ["image", "rayon"] }
four-char-code = "2.3.0"
# Portable (platform-neutral) DRM FourCC enum — the same type `gbm` re-exports,
# used directly so shader/format code need not pull in `gbm` (Linux-only).
drm-fourcc = "2.2.0"
g2d-sys = "1.2.0"

gbm = { package = "edgefirst-gbm", version = "0.18.2", default-features = false, features = ["dynamic", "drm-support"] }
gls = "0.1.6"
half = { version = "2.7.1", features = ["num-traits"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
image-compare = "0.5.0"
jpeg-encoder = { version = "0.7.0", features = ["simd"] }
kamadak-exif = "0.6.1"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
lapjv = "0.3.0"
libc = "0.2.183"
libloading = "0.8.8"
log = "0.4.29"
nalgebra = "0.34.2"
ndarray = { version = "0.17.2", features = ["rayon"] }
ndarray-stats = "0.7.0"
nix = { version = "0.31.2", features = ["fs", "ioctl", "mman"] }
num-traits = "0.2.19"
numpy = { version = "0.28.0", features = ["half"] }
opencv = { version = "0.98", default-features = false, features = ["imgproc"] }
procfs = "0.18.0"
pyo3 = { version = "0.28.0" }
pyo3-build-config = { version = "0.28.0" }
pythonize = "0.28.0"
rand = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.11.0"
rustc_version = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["rt", "sync"] }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["registry"] }
uuid = { version = "1.22.0", features = ["v4"] }
yuv = { version = "0.8.14", features = ["fast_mode"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
zune-jpeg = "0.5.15"
zune-png = "0.5.2"
safetensors = "0.7.0"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true
