[project]
name = "edgefirst"
dynamic = ["version"]
license = "Apache-2.0"

[project.urls]
Homepage = "https://edgefirst.studio"
Documentation = "https://doc.edgefirst.ai"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
all-features = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
]
addopts = "-m 'not benchmark'"
