[package]
name = "g2d-sys"
description = "Low-level FFI bindings for the G2D Library"
license = "AGPL-3.0"
homepage = "https://doc.edgefirst.ai"
keywords = ["edgefirst", "visionpack", "deepview"]
categories = ["computer-vision", "multimedia::video", "external-ffi-bindings"]
version = "1.0.1"
edition = "2024"

[dependencies]
libloading = "0.8.1"
dma-buf = "0.5.0"
nix = { version = "0.30.1", features = ["ioctl"] }