[package]
name = "edgefirst-codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Image codec for decoding JPEG/PNG into pre-allocated EdgeFirst tensors"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["jpeg", "png", "image-decoding", "zero-copy", "edge-ai"]
categories = ["multimedia::images", "embedded"]
documentation = "https://docs.rs/edgefirst-codec"

[features]
default = []
opencv = ["dep:opencv"]
turbojpeg = ["dep:turbojpeg"]

[dependencies]
edgefirst-tensor = { workspace = true }
kamadak-exif = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
opencv = { workspace = true, optional = true }
tracing = { workspace = true }
turbojpeg = { version = "0.5", optional = true }
zune-png = { workspace = true }

[dev-dependencies]
edgefirst-bench = { workspace = true }
image = { workspace = true }
# zune-jpeg is used only by parity tests and the comparison benchmark.
zune-jpeg = { workspace = true }


[[bench]]
name = "codec_benchmark"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
