[package]
name = "edgefirst-decoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[features]
#default = ["tracker"]
#tracker = ["dep:edgefirst-tracker"]

[dependencies]
argminmax = { workspace = true }
#edgefirst-tracker = { workspace = true, optional = true }
env_logger = { workspace = true }
fast-math = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rayon = { workspace = true }


[dev-dependencies]
divan = { workspace = true }
image = { workspace = true }


[[bench]]
name = "decoder_benchmark"
harness = false
