[package]
name = "edgefirst-decoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "ML model output decoding for YOLO and ModelPack object detection and segmentation"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["yolo", "object-detection", "segmentation", "nms", "edge-ai"]
categories = ["multimedia::images", "science::ml", "algorithms"]
documentation = "https://docs.rs/edgefirst-decoder"

[features]
#default = ["tracker"]
#tracker = ["dep:edgefirst-tracker"]

[dependencies]
argminmax = { workspace = true }
#edgefirst-tracker = { workspace = true, optional = true }
env_logger = { workspace = true }
fast-math = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
image = { workspace = true }

[[bench]]
name = "decoder_benchmark"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }