[package]
name = "edgefirst"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = ["ndarray", "opengl"]
ndarray = ["edgefirst-tensor/ndarray"]
opengl = ["edgefirst-image/opengl"]

[dependencies]
edgefirst-image = { version = "*", path = "../image" }
edgefirst-tensor = { version = "*", path = "../tensor" }
edgefirst-decoder = { version = "*", path = "../decoder" }
