[package]
name = "g2d-sys"
description = "Low-level FFI bindings for NXP i.MX G2D 2D graphics accelerator"
authors = ["Au-Zone Technologies <support@au-zone.com>"]
license = "MIT"
version = "1.0.1"
edition = "2021"
readme = "README.md"
homepage = "https://edgefirst.ai"
repository = "https://github.com/EdgeFirstAI/hal"
keywords = ["g2d", "nxp", "imx8", "ffi", "graphics"]
categories = ["external-ffi-bindings", "hardware-support", "multimedia::images"]
documentation = "https://docs.rs/g2d-sys"

[dependencies]
four-char-code = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
