[package]
name = "edgefirst-gl"
version.workspace = true
authors = [
    "Varphone Wong <varphone@qq.com>",
    "Au-Zone Technologies <support@au-zone.com>",
]
edition = "2021"
description = "Minimal OpenGL ES bindings — a trimmed, maintained fork of `gls`"
documentation = "https://docs.rs/edgefirst-gl"
repository.workspace = true
readme = "README.md"
keywords = ["opengl", "opengles", "graphics", "gl"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[lib]
name = "edgefirst_gl"

# No runtime dependencies: the bindings are generated at build time and the
# kept wrappers use only `std`.
[build-dependencies]
gl_generator = "0.14"
