[package]
name = "edgefirst-hal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "EdgeFirst Hardware Abstraction Layer for edge AI inference pipelines"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["edge-ai", "machine-learning", "tensor", "image-processing", "embedded"]
categories = ["multimedia::images", "science", "embedded"]
documentation = "https://docs.rs/edgefirst-hal"

[features]
default = ["ndarray", "opengl"]
ndarray = ["edgefirst-tensor/ndarray"]
opengl = ["edgefirst-image/opengl"]

[dependencies]
edgefirst-decoder = { workspace = true }
edgefirst-image = { workspace = true }
edgefirst-tensor = { workspace = true }
