[package]
name = "edgefirst-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[features]
default = ["opengl", "decoder"]
opengl = ["dep:khronos-egl", "dep:gbm"]
decoder = ["dep:edgefirst-decoder", "dep:ndarray-stats"]
g2d_test_formats = []

[dependencies]
ctor = { workspace = true }
edgefirst-tensor = { workspace = true }
enum_dispatch = { workspace = true }
env_logger = { workspace = true }
fast_image_resize = { workspace = true }
four-char-code = { workspace = true }
gls = { workspace = true }
jpeg-encoder = { workspace = true }
kamadak-exif = { workspace = true }
khronos-egl = { workspace = true, optional = true }
libc = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
yuv = { workspace = true }
zune-jpeg = { workspace = true }
zune-png = { workspace = true }
edgefirst-decoder = { workspace = true, optional = true }
ndarray-stats = { workspace = true, optional = true}

[target.'cfg(target_os = "linux")'.dependencies]
dma-heap = { workspace = true }
g2d-sys = { workspace = true }
gbm = { workspace = true, optional = true }

[dev-dependencies]
divan = { workspace = true }
image = { workspace = true }
image-compare = { workspace = true }

[[bench]]
name = "image_benchmark"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
