[package]
name = "edgefirst_hal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false  # Python bindings only - distributed via PyPI, not crates.io

[lib]
crate-type = ["cdylib"]

[features]
default = ["python-abi311"]
python-abi38 = ["pyo3/abi3-py38"]
python-abi311 = ["pyo3/abi3-py311"]

[dependencies]
edgefirst = { workspace = true }
env_logger = { workspace = true }
four-char-code = { workspace = true }
half = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
pythonize = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true, features = ["resolve-config"] }
rustc_version = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
