[package]
name = "edgefirst_hal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
publish = false  # Python bindings only - distributed via PyPI, not crates.io

[lib]
crate-type = ["cdylib"]

[features]
default = []
abi3-py38 = ["pyo3/abi3-py38"]
abi3-py311 = ["pyo3/abi3-py311"]
tracing = ["edgefirst-hal/tracing"]

[dependencies]
edgefirst-hal = { workspace = true, features = ["tracker"] }
env_logger = { workspace = true }
four-char-code = { workspace = true }
half = { workspace = true }
log = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
rayon = { workspace = true }
pythonize = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true, features = ["resolve-config"] }
rustc_version = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
